# shuecm

./: .bot.env.example  .database.env.example  .env.example  .general.env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  bot.env  database.env  general.env.example  mkdocs.yml  pyproject.toml
api/: __init__.py  app.py  pyproject.toml
api/models/: __init__.py  chat.py
db/: README.md  __init__.py  config.py  db.py  prestart.py  pyproject.toml
db/migrations/: 1571157224_add_warns.py  config.ini
db/models/: __init__.py  chat.py  role.py  user.py
db/pip-wheel-metadata/db-0.1.0.dist-info/: METADATA  WHEEL
db/structs/: __init__.py  status.py
docs/: index.md  performance.md  roles.md  upgrade.md
scripts/: install  local-run
shuecm/: __init__.py  app.py  config.py  context.py  pyproject.toml  utils.py
shuecm/blueprints/: __init__.py  admin.py  info.py  role.py  user.py
shuecm/middlewares/: __init__.py  bot_admin.py  registration.py
shuecm/models/: __init__.py  db.py  prestart.py
shuecm/models/models/: chat.py  user.py
shuecm/rules/: __init__.py
shuecm/validators/: __init__.py
tests/: small_test.py  test_shuecm.py
