[tool.poetry]
name = "api"
version = "0.1.0"
description = "An API for shuecm"
authors = ["Shue Developers"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.40.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
