[tool.poetry]
name = "db"
version = "0.1.0"
description = "Database interaction"
authors = ["Shue Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
umongo = "^2.1"
"vk.py" = {git = "https://github.com/prostomarkeloff/vk.py"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
