[tool.poetry]
name = "db"
version = "0.2.0"
description = "Database interaction"
authors = ["Shue Developers"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
umongo = "^2.1"
dnspython = "^1.16"
"vk.py" = {git = "https://github.com/prostomarkeloff/vk.py"}
motor = "2.0"
environs = "^6.0"
mongodb-migrations = "^0.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
